Implemented POST for modus/modi. Imported/composer installed Fig\Http\Message\StatusCodeInterface

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "vlucas/phpdotenv": "^5.5",
         "firebase/php-jwt": "^6.8",
         "monolog/monolog": "^3.4",
-        "slim/slim": "^4.12"
+        "slim/slim": "^4.12",
+        "fig/http-message-util": "^1.1"
     }
 }
