--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "firebase/php-jwt": "^6.8",
         "monolog/monolog": "^3.4",
         "slim/slim": "^4.12",
-        "fig/http-message-util": "^1.1"
+        "fig/http-message-util": "^1.1",
+        "vlucas/valitron": "^1.4"
     }
 }
