--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
         "slim/slim": "^4.12",
         "fig/http-message-util": "^1.1",
         "vlucas/valitron": "^1.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.3"
     }
 }
